new version of the treasure hunt
Updated the game to Romanian language with new hints and styles.

--- a/index.html
+++ b/index.html
@@ -1,183 +1,132 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ro">
 <head>
   <meta charset="UTF-8" />
-  <title>Treasure Hunt Game</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Treasure Hunt - Lumina Curajului</title>
   <style>
-    * {
-      box-sizing: border-box;
-    }
-
     body {
-      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(135deg, #a8edea, #fed6e3);
+      font-family: 'Poppins', sans-serif;
+      background: linear-gradient(135deg, #0b132b, #1c2541, #3a506b);
+      color: #f8f8f8;
+      text-align: center;
+      margin: 0;
+      padding: 0;
+      min-height: 100vh;
       display: flex;
       flex-direction: column;
+      justify-content: center;
       align-items: center;
-      justify-content: flex-start;
-      min-height: 100vh;
-      margin: 0;
-      padding: 20px;
     }
 
     h1 {
-      color: #333;
-      margin-bottom: 10px;
-      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+      font-size: 2em;
+      margin-bottom: 20px;
+      color: #ffd700;
+      text-shadow: 0 0 10px #ffd700;
     }
 
-    #game {
-      position: relative;
-      width: 600px;
-      height: 400px;
-      background: url('https://i.imgur.com/w6b1jtp.jpg') center/cover no-repeat;
-      border: 4px solid #333;
-      border-radius: 10px;
-      cursor: crosshair;
-      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+    .indiciu {
+      display: none;
+      max-width: 600px;
+      background: rgba(255, 255, 255, 0.1);
+      padding: 20px;
+      border-radius: 15px;
+      box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
+      line-height: 1.6;
+      font-size: 1.1em;
+      animation: fadeIn 1s ease forwards;
     }
 
-    #message {
-      margin-top: 15px;
-      font-size: 1.2em;
-      color: #333;
+    .indiciu.active {
+      display: block;
     }
 
-    #clicks {
-      margin-top: 5px;
-      font-weight: bold;
-    }
-
-    #resetBtn {
-      margin-top: 15px;
-      background: #ff6f61;
-      color: white;
-      border: none;
-      padding: 10px 20px;
-      border-radius: 8px;
-      cursor: pointer;
+    button {
+      margin-top: 25px;
+      padding: 12px 24px;
       font-size: 1em;
-      transition: background 0.2s;
+      background-color: #ffd700;
+      border: none;
+      border-radius: 25px;
+      cursor: pointer;
+      color: #1c2541;
+      font-weight: bold;
+      transition: background 0.3s, transform 0.2s;
     }
 
-    #resetBtn:hover {
-      background: #e65b50;
+    button:hover {
+      background-color: #ffec80;
+      transform: scale(1.05);
     }
 
-    #marker {
-      position: absolute;
-      width: 16px;
-      height: 16px;
-      background-color: rgba(255, 0, 0, 0.7);
-      border: 2px solid white;
-      border-radius: 50%;
-      transform: translate(-50%, -50%);
-      pointer-events: none;
-      display: none;
-    }
-
-    #treasure {
-      position: absolute;
-      width: 20px;
-      height: 20px;
-      background: gold;
-      border-radius: 50%;
-      border: 2px solid #333;
-      transform: translate(-50%, -50%);
-      display: none;
-    }
-
-    footer {
-      margin-top: 30px;
-      font-size: 0.9em;
-      color: #555;
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
 <body>
-  <h1>🏴‍☠️ Treasure Hunt 🪙</h1>
-  <div id="game">
-    <div id="marker"></div>
-    <div id="treasure"></div>
-  </div>
-  <div id="message">Click anywhere on the map to start hunting!</div>
-  <div id="clicks"></div>
-  <button id="resetBtn">Reset Game</button>
 
-  <footer>Made by Luca 👨‍💻</footer>
+  <h1>🌟 Vânătoarea Luminii 🌟</h1>
+
+  <div id="indiciu1" class="indiciu active">
+    <p><strong>Indiciul 1:</strong><br>
+    Fiecare lumină pornește dintr-un gest de curaj.<br>
+    Fă o poză de echipă imitând postura statuii. Imaginați-vă că statuia prinde viață — ce credeți că ar face sau ar spune dacă ar fi azi în parc?<br>
+    Filmați răspunsul.<br>
+    Următoarea rază o găsiți acolo unde râsul copiilor nu se stinge niciodată.</p>
+  </div>
+
+  <div id="indiciu2" class="indiciu">
+    <p><strong>Indiciul 2:</strong><br>
+    Lumina bucuriei e în joc.<br>
+    Filmați 10 secunde în care echipa voastră face o coregrafie veselă sau strigă un mesaj pozitiv legat de lumină.<br>
+    Următorul indiciu e acolo unde se văd oameni ce aleargă spre visurile lor.</p>
+  </div>
+
+  <div id="indiciu3" class="indiciu">
+    <p><strong>Indiciul 3:</strong><br>
+    Lumina perseverenței se aprinde atunci când nu renunți.<br>
+    Fiecare membru aleargă 10 secunde cântând, apoi faceți o poză în cerc, cu mâinile ridicate în formă de raze.<br>
+    Următoarea rază e aproape de locul liniștii și reculegerii spirituale.</p>
+  </div>
+
+  <div id="indiciu4" class="indiciu">
+    <p><strong>Indiciul 4:</strong><br>
+    Lumina credinței se aprinde în tăcere.<br>
+    Scrieți într-un mesaj ceva pentru care sunteți recunoscători și găsiți în natură un simbol al recunoștinței — faceți o poză simbolului.<br>
+    Următoarea rază se află sub cel mai bătrân copac din parc — acolo unde timpul tace și frunzele ascultă.</p>
+  </div>
+
+  <div id="final" class="indiciu">
+    <p><strong>Final:</strong><br>
+    Ați aprins toate razele! ✨<br>
+    Deschideți cutia și primiți Lumina Unității — simbolul echipei voastre și al bucuriei simple.<br>
+    Lăsați aici o rază nouă: scrieți pe un bilețel un gând frumos pentru următoarea echipă.<br>
+    Lumina voastră va continua să strălucească.</p>
+  </div>
+
+  <button id="nextBtn">Următorul indiciu ➜</button>
 
   <script>
-    const game = document.getElementById("game");
-    const message = document.getElementById("message");
-    const clicksDisplay = document.getElementById("clicks");
-    const marker = document.getElementById("marker");
-    const treasure = document.getElementById("treasure");
-    const resetBtn = document.getElementById("resetBtn");
+    const indicii = document.querySelectorAll('.indiciu');
+    const btn = document.getElementById('nextBtn');
+    let current = 0;
 
-    let width = game.clientWidth;
-    let height = game.clientHeight;
-    let treasureX, treasureY, clicks;
-
-    function randomCoordinate(max) {
-      return Math.floor(Math.random() * max);
-    }
-
-    function distance(x1, y1, x2, y2) {
-      const dx = x1 - x2;
-      const dy = y1 - y2;
-      return Math.sqrt(dx * dx + dy * dy);
-    }
-
-    function getHint(dist) {
-      if (dist < 20) return "🔥 You're on fire! The treasure is right here!";
-      if (dist < 50) return "💎 Very hot!";
-      if (dist < 100) return "🔥 Hot!";
-      if (dist < 200) return "🌤️ Warm.";
-      if (dist < 300) return "🌬️ Cold.";
-      return "❄️ Very cold...";
-    }
-
-    function setTreasure() {
-      treasureX = randomCoordinate(width);
-      treasureY = randomCoordinate(height);
-      treasure.style.left = treasureX + "px";
-      treasure.style.top = treasureY + "px";
-    }
-
-    function resetGame() {
-      clicks = 0;
-      setTreasure();
-      message.textContent = "Click anywhere on the map to start hunting!";
-      clicksDisplay.textContent = "";
-      marker.style.display = "none";
-      treasure.style.display = "none";
-    }
-
-    game.addEventListener("click", function (e) {
-      const rect = game.getBoundingClientRect();
-      const x = e.clientX - rect.left;
-      const y = e.clientY - rect.top;
-      clicks++;
-
-      const dist = distance(x, y, treasureX, treasureY);
-      const hint = getHint(dist);
-      message.textContent = hint;
-      clicksDisplay.textContent = `Clicks: ${clicks}`;
-
-      marker.style.left = x + "px";
-      marker.style.top = y + "px";
-      marker.style.display = "block";
-
-      if (dist < 20) {
-        treasure.style.display = "block";
-        message.textContent = `🏆 You found the treasure in ${clicks} clicks!`;
+    btn.addEventListener('click', () => {
+      indicii[current].classList.remove('active');
+      current++;
+      if (current < indicii.length) {
+        indicii[current].classList.add('active');
+      }
+      if (current === indicii.length - 1) {
+        btn.textContent = "✨ Sfârșit ✨";
+      }
+      if (current === indicii.length) {
+        btn.style.display = 'none';
       }
     });
-
-    resetBtn.addEventListener("click", resetGame);
-
-    // Initialize the game
-    resetGame();
   </script>
 </body>
 </html>
